--- a/packages/core/src/SnackbarProvider/SnackbarProvider.mdx
+++ b/packages/core/src/SnackbarProvider/SnackbarProvider.mdx
@@ -1,10 +1,7 @@
-import { Canvas, Meta, Story } from "@storybook/addon-docs";
-import { SnackbarProviderButtonsStory } from "./stories/SnackbarProviderStories.tsx";
+import { Canvas, Meta } from "@storybook/addon-docs";
+import * as SnackbarProviderStories from "./stories/SnackbarProvider.stories";
 
-<Meta
-  title="Components/Snackbar/Provider"
-  parameters={{ eyes: { include: false } }}
-/>
+<Meta of={SnackbarProviderStories} />
 
 # Snackbar Provider
 
@@ -41,6 +38,4 @@ const id = enqueueSnackbar("This is a warning!", { variant: "warning" });
 closeSnackbar(id);
 ```
 
-<Canvas>
-  <Story name="Snackbar Provider" story={SnackbarProviderButtonsStory} />
-</Canvas>
+<Canvas of={SnackbarProviderStories.Provider} />
