--- a/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
+++ b/packages/core/src/Table/stories/TableHooks/TableHooks.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { UseHvHooksStory } from "./TableHooks";
+import * as TableHooksStories from "./TableHooks.stories";
 
-<Meta title="Visualizations/Table/Table Hooks" />
+<Meta of={TableHooksStories} />
 
 # Table Hooks
 
@@ -36,6 +36,4 @@ The following plugin hooks are available:
 - `useHvTableSticky`: Allows defining sticky headers and columns. [See sticky headers and columns](./?path=/docs/visualizations-table-table-hooks-usehvtablesticky--docs).
 - `useHvHeaderGroups`: Allows defining grouped headers. [See grouped headers](./?path=/docs/visualizations-table-table-hooks-usehvheadergroups--docs).
 
-<Canvas>
-  <Story name="Table Hooks" story={UseHvHooksStory} />
-</Canvas>
+<Canvas of={TableHooksStories.UseHvHooksStory} />
