--- a/packages/core/src/Table/stories/TableRenderers/DateColumnRenderer.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/DateColumnRenderer.mdx
@@ -1,7 +1,10 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { DateColumnRendererStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers/Date Column Renderer" />
+<Meta
+  of={TableRenderersStories}
+  title="Visualizations/Table/Table Renderers/Date Column Renderer"
+/>
 
 # Date Column Renderer
 
@@ -16,6 +19,4 @@ Output:
 
 - `col: HvTableColumnConfig`: The modified column configuration with the parameters required to render the text.
 
-<Canvas>
-  <Story name="Date Column Renderer" story={DateColumnRendererStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.DateColumnRendererStory} />
