--- a/packages/core/src/Table/stories/TableRenderers/DropdownColumnRenderer.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/DropdownColumnRenderer.mdx
@@ -1,7 +1,10 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { DropdownColumnRendererStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers/Dropdown Column Renderer" />
+<Meta
+  of={TableRenderersStories}
+  title="Visualizations/Table/Table Renderers/Dropdown Column Renderer"
+/>
 
 # Dropdown Column Renderer
 
@@ -20,6 +23,4 @@ Output:
 
 - `col: HvTableColumnConfig`: The modified column configuration with the parameters required to render the text.
 
-<Canvas>
-  <Story name="Dropdown Column Renderer" story={DropdownColumnRendererStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.DropdownColumnRendererStory} />
