--- a/packages/core/src/Table/stories/TableRenderers/ExpandColumnRenderer.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/ExpandColumnRenderer.mdx
@@ -1,7 +1,10 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { ExpandColumnRendererStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers/Expand Column Renderer" />
+<Meta
+  of={TableRenderersStories}
+  title="Visualizations/Table/Table Renderers/Expand Column Renderer"
+/>
 
 # Expand Column Renderer
 
@@ -20,6 +23,4 @@ Output:
 
 - `col: HvTableColumnConfig`: The modified column configuration with the parameters required to render the text.
 
-<Canvas>
-  <Story name="Expand Column Renderer" story={ExpandColumnRendererStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.ExpandColumnRendererStory} />
