--- a/packages/core/src/Table/stories/TableRenderers/NumberColumnRenderer.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/NumberColumnRenderer.mdx
@@ -1,7 +1,10 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { NumberColumnRendererStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers/Number Column Renderer" />
+<Meta
+  of={TableRenderersStories}
+  title="Visualizations/Table/Table Renderers/Number Column Renderer"
+/>
 
 # Number Column Renderer
 
@@ -16,6 +19,4 @@ Output:
 
 - `col: HvTableColumnConfig`: The modified column configuration with the parameters required to render the text.
 
-<Canvas>
-  <Story name="Number Column Renderer" story={NumberColumnRendererStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.NumberColumnRendererStory} />
