--- a/packages/core/src/Table/stories/TableRenderers/SwitchColumnRenderer.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/SwitchColumnRenderer.mdx
@@ -1,7 +1,10 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { SwitchColumnRendererStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers/Switch Column Renderer" />
+<Meta
+  of={TableRenderersStories}
+  title="Visualizations/Table/Table Renderers/Switch Column Renderer"
+/>
 
 # Switch Column Renderer
 
@@ -20,6 +23,4 @@ Output:
 
 - `col: HvTableColumnConfig`: the modified column configuration with the parameters required to render the text.
 
-<Canvas>
-  <Story name="Switch Column Renderer" story={SwitchColumnRendererStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.SwitchColumnRendererStory} />
