--- a/packages/core/src/Table/stories/TableRenderers/TableRenderers.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/TableRenderers.mdx
@@ -1,7 +1,7 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { AllColumnRenderersStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers" />
+<Meta of={TableRenderersStories} title="Visualizations/Table/Table Renderers" />
 
 # Table Renderers
 
@@ -26,6 +26,4 @@ The following renderers are available:
 
 Complete sample table that uses most of the provided renderers.
 
-<Canvas>
-  <Story name="Table Renderers" story={AllColumnRenderersStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.AllColumnRenderersStory} />
