--- a/packages/core/src/Table/stories/TableRenderers/TagColumnRenderer.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/TagColumnRenderer.mdx
@@ -1,7 +1,10 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { TagColumnRendererStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers/Tag Column Renderer" />
+<Meta
+  of={TableRenderersStories}
+  title="Visualizations/Table/Table Renderers/Tag Column Renderer"
+/>
 
 # Tag Column Renderer
 
@@ -21,6 +24,4 @@ Output:
 
 - `col: HvTableColumnConfig`: The modified column configuration with the parameters required to render the text.
 
-<Canvas>
-  <Story name="Tag Column Renderer" story={TagColumnRendererStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.TagColumnRendererStory} />
