--- a/packages/core/src/Table/stories/TableRenderers/TextColumnRenderer.mdx
+++ b/packages/core/src/Table/stories/TableRenderers/TextColumnRenderer.mdx
@@ -1,7 +1,10 @@
 import { Meta, Canvas, Story } from "@storybook/addon-docs";
-import { TextColumnRendererStory } from "./TableRenderers";
+import * as TableRenderersStories from "./TableRenderers.stories";
 
-<Meta title="Visualizations/Table/Table Renderers/Text Column Renderer" />
+<Meta
+  of={TableRenderersStories}
+  title="Visualizations/Table/Table Renderers/Text Column Renderer"
+/>
 
 # Text Column Renderer
 
@@ -16,6 +19,4 @@ Output:
 
 - `col: HvTableColumnConfig`: The modified column configuration with the parameters required to render the text.
 
-<Canvas>
-  <Story name="Text Column Renderer" story={TextColumnRendererStory} />
-</Canvas>
+<Canvas of={TableRenderersStories.TextColumnRendererStory} />
